--- a/front-Sistema_Hotel/src/app/menu/menu.component.html
+++ b/front-Sistema_Hotel/src/app/menu/menu.component.html
@@ -2,3 +2,9 @@
   <header class="header">
     <h1>RESERVA DE HOTELES</h1>
   </header>
+  <section class="hero-section">
+    <div class="carousel">
+      <div class="carousel-item active" style="background-image: url('path/to/hero1.jpg');">
+        <div class="carousel-caption">
+          <h2>Bienvenido a Nuestro Hotel</h2>
+          <a href="#" class="btn-primary">Reserva Ahora</a>
