--- a/front-Sistema_Hotel/src/app/menu/menu.component.html
+++ b/front-Sistema_Hotel/src/app/menu/menu.component.html
@@ -8,3 +8,14 @@
         <div class="carousel-caption">
           <h2>Bienvenido a Nuestro Hotel</h2>
           <a href="#" class="btn-primary">Reserva Ahora</a>
+          </div>
+      </div>
+      <div class="carousel-item" style="background-image: url('path/to/hero2.jpg');">
+        <div class="carousel-caption">
+          <h2>Experiencias Únicas</h2>
+          <a href="#" class="btn-primary">Descubre Más</a>
+        </div>
+      </div>
+      <!-- Añadir más elementos del carrusel si es necesario -->
+    </div>
+  </section>
