--- a/front-Sistema_Hotel/src/app/menu/menu.component.html
+++ b/front-Sistema_Hotel/src/app/menu/menu.component.html
@@ -19,3 +19,25 @@
       <!-- Añadir más elementos del carrusel si es necesario -->
     </div>
   </section>
+  <section class="rooms-section">
+    <div class="container">
+      <h2 >Nuestras Habitaciones</h2>
+      <div class="rooms-grid">
+        <div class="room-card">
+          <div class="room-details">
+            <h3>Habitación Standard</h3>
+            <p>Descripción breve de la habitación.</p>
+            <a href="#" class="btn-secondary">Ver más</a>
+          </div>
+        </div>
+        <div class="room-card">
+          <div class="room-details">
+            <h3>Habitación Deluxe</h3>
+            <p>Descripción breve de la habitación.</p>
+            <a href="#" class="btn-secondary">Ver más</a>
+          </div>
+        </div>
+        <!-- Añadir más tarjetas de habitaciones si es necesario -->
+      </div>
+    </div>
+  </section>
