--- a/front-Sistema_Hotel/src/app/menu/menu.component.html
+++ b/front-Sistema_Hotel/src/app/menu/menu.component.html
@@ -61,3 +61,7 @@
       </form>
     </div>
   </section>
+  <footer class="footer">
+    <p>&copy; 2024 Reserva de Hoteles. Todos los derechos reservados.</p>
+  </footer>
+</div>
