--- a/front-Sistema_Hotel/src/app/menu/menu.component.css
+++ b/front-Sistema_Hotel/src/app/menu/menu.component.css
@@ -99,3 +99,57 @@
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
   }
+.room-card {
+    background: linear-gradient(135deg, #ff69b4, #ff6347, #ff4500, #ff1493, #e6e6fa);
+    color: #fff;
+    border-radius: 20px; /* Esquinas ovaladas */
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s;
+    text-align: center; /* Centra el texto dentro de la tarjeta */
+    padding: 20px; /* Espaciado interno */
+  }
+  
+  .room-card:hover {
+    transform: translateY(-10px);
+  }
+  
+  .room-details {
+    padding: 20px;
+  }
+  
+  .btn-secondary {
+    display: inline-block;
+    background-color: #1a1a2e;
+    color: #fff;
+    padding: 10px 20px;
+    margin-top: 15px;
+    border-radius: 20px; /* Esquinas ovaladas */
+    text-decoration: none;
+    transition: background-color 0.3s;
+  }
+  
+  .btn-secondary:hover {
+    background-color: #333;
+  }
+  
+  .about-section {
+    padding: 50px 20px;
+    background: linear-gradient(135deg, #ff1493, #0000ff);
+    text-align: center;
+    border-radius: 20px; /* Esquinas ovaladas */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  .about-section h2 {
+    text-shadow: 1px 1px 0 #000; /* Contorno negro fino */
+  }
+  
+  .testimonials-section {
+    padding: 50px 20px;
+    background: linear-gradient(135deg, #ff0000, #800080);
+    color: #fff;
+    text-align: center;
+    border-radius: 20px; /* Esquinas ovaladas */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
