--- a/front-Sistema_Hotel/src/app/menu/menu.component.css
+++ b/front-Sistema_Hotel/src/app/menu/menu.component.css
@@ -58,7 +58,7 @@
     background-position: center;
     border-radius: 20px; /* Esquinas ovaladas */
   }
-    .carousel-item.active {
+  .carousel-item.active {
     display: block;
   }
   
@@ -99,7 +99,7 @@
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
   }
-.room-card {
+  .room-card {
     background: linear-gradient(135deg, #ff69b4, #ff6347, #ff4500, #ff1493, #e6e6fa);
     color: #fff;
     border-radius: 20px; /* Esquinas ovaladas */
@@ -152,4 +152,76 @@
     text-align: center;
     border-radius: 20px; /* Esquinas ovaladas */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+
+ .testimonials-section h2 {
+    text-shadow: 1px 1px 0 #000; /* Contorno negro fino */
+  }
+  
+  .testimonials-carousel {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    margin-top: 20px;
+  }
+  
+  .testimonial {
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 20px;
+    border-radius: 20px; /* Esquinas ovaladas */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  .testimonial p {
+    font-style: italic;
+    text-shadow: 1px 1px 0 #000; /* Contorno negro fino */
+  }
+  
+  .contact-section {
+    padding: 50px 20px;
+    background: linear-gradient(135deg, #0000ff, #ff1493);
+    color: #fff;
+    text-align: center;
+    border-radius: 20px; /* Esquinas ovaladas */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  .contact-section h2 {
+    text-shadow: 1px 1px 0 #000; /* Contorno negro fino */
+  }
+  
+  .contact-form {
+    max-width: 500px;
+    margin: 0 auto;
+  }
+  
+  .form-group {
+    margin-bottom: 20px;
+  }
+  
+  .form-group label {
+    display: block;
+    margin-bottom: 5px;
+    text-shadow: 1px 1px 0 #000; /* Contorno negro fino */
+  }
+  
+  .form-group input, .form-group textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 20px; /* Esquinas ovaladas */
+  }
+  
+  .footer {
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+    margin-top: 20px;
+    border-radius: 20px; /* Esquinas ovaladas */
+  }
+  
+  /* Contorno negro fino en las secciones específicas */
+  .rooms-section h2 {
+    text-shadow: 1px 1px 0 #000; /* Contorno negro fino */
   }
